--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Vichitra"
         tools:targetApi="31">
         <activity
+            android:name=".callsFragment"
+            android:exported="false" />
+        <activity
+            android:name=".statusFragment"
+            android:exported="false" />
+        <activity
+            android:name=".chatFragment"
+            android:exported="false" />
+        <activity
             android:name=".SetupProfile"
             android:exported="false" />
         <activity
